Finished the work

--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website By | Imrul Hossain Rudro</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        
+    <section class="header-top">
+        <div class="half-width margin-top">
+            <h2>Hello I'am</h2>
+            <h1>Jack Smith</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore totam nisi, amet provident ut quos excepturi impedit, iusto, aut illum ipsum magnam. Fuga, voluptatum beatae.</p>
+            <a href="https://www.designersfarm.com">Hire Me</a>
+        </div>
+        <div class="half-width margin-top">
+            <img src="images/peter.png" alt="">
+        </div>
     </section>
+    <section class="bio-area">
+        <div class="half-width">
+            <img src="images/peter_dream.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Biography</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis sint eius officia facere expedita, eveniet autem dicta ab placeat, amet ut, nobis quidem voluptatum quos quas numquam necessitatibus ea est perferendis odio? Deleniti error dolores tempore repudiandae .</p>
+            <a href="https://www.designersfarm.com">Download Cv</a>
+        </div>
+    </section>
+    <section class="leatest-work-area">
+        <h2>Leatest Work</h2>
+        <div class="leatest-work">
+            <img src="images/latest-work/work-1.png" alt="">
+            <img src="images/latest-work/work-2.jpg" alt="">
+            <img src="images/latest-work/work-3.jpg" alt="">
+        </div>
+    </section>
+    <section class="client-area">
+        <div class="client-des">
+            <h1>What Client are say</h1>
+            <h3>Bruce Moccy</h3>
+            <h5>Founder & CEO Alies</h5>
+            <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est adipisci fuga repudiandae culpa laudantium architecto voluptatum. Nihil laborum vero id"</p>
+        </div>
+        <div class="message-box">
+            <p>Leave me a message in the</p>
+            <h3>programing.hero1@gmail.com</h3>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; all rights reserved By | Imrul Hossain Ruddro</p>
+    </footer>
 </body>
 </html>
