finished the work

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; all rights reserved By | Imrul Hossain Ruddro</p>
+        <p>&copy; all rights reserved By | Imrul Hossain Rudro</p>
     </footer>
 </body>
 </html>
